test/langtools/tools/javac/valhalla/value-objects/classfile/class_flags/CheckClassfileFlagsTest.out
CheckClassfileFlagsTest.java:15:9: compiler.err.cant.access: ValueWithInvalidFlags, (compiler.misc.bad.class.file.header: ValueWithInvalidFlags.class, (compiler.misc.bad.class.signature: "QValueWithInvalidFlags;"))
1 error
